--- a/index.html
+++ b/index.html
@@ -60,81 +60,97 @@
                     <td>2021 - till now</td>
                 </tr>
             </table>
-            <p>
-                During my work in Webbylab, I managed to work on 4 projects in which I wrote a checklist
-                and test-cases for them, conducted functional testing, worked with a database, in which I
-                viewed and also write data to it through SQL, tested the backend of the site through the
-                Postman, Tested UI according to the Figma. Tested the Word plug-in on the desktop and in
-                One Drive.
-            </p>
+            <!-- <div class="work_experience"> -->
+            <ul class="list">
+                <li>
+                    During my work in Webbylab, I managed to work on 4 projects in which I wrote a checklist
+                    and test-cases for them, conducted functional testing, worked with a database, in which I
+                    viewed and also write data to it through SQL, tested the backend of the site through the
+                    Postman, Tested UI according to the Figma. Tested the Word plug-in on the desktop and in
+                    One Drive.
+                </li>
+            </ul>
+            <!-- </div> -->
         </div>
 
         <div class="card bg-red">
             <h2>QUALIFICATIONS</h2>
-            <ul class="link-list">
-                <li>
-                    <strong>Technologies and skills</strong>
-                </li>
-                <ul class="skills">
+            <ul>
+                <div class="link-list">
                     <li>
-                        Bug Report
+                        <strong>Technologies and skills</strong>
                     </li>
+                </div>
+                <div class="skils">
+                    <ul>
+                        <li>
+                            Bug Report
+                        </li>
+                        <li>
+                            Checklists
+                        </li>
+                        <li>
+                            Test Cases
+                        </li>
+                        <lI>
+                            DevTools
+                        </lI>
+                        <li>
+                            TestLink
+                        </li>
+                        <li>
+                            Jira
+                        </li>
+                        <li>
+                            Postman
+                        </li>
+                        <li>
+                            SQL
+                        </li>
+                        <li>
+                            Basic knowledge of GIT
+                        </li>
+                        <li>
+                            Basic knowledge of HTML and CSS
+                        </li>
+                    </ul>
+                </div>
+                <div class="link-list">
                     <li>
-                        Checklists
+                        <strong>Soft skills</strong>
                     </li>
+                </div>
+                <div class="skils">
+                    <ul>
+                        <li>
+                            Non-conflicting
+                        </li>
+                        <li>
+                            Learning fast
+                        </li>
+                        <li>
+                            Sociable
+                        </li>
+                    </ul>
+                </div>
+                <div class="link-list">
                     <li>
-                        Test Cases
+                        <strong>Languages</strong>
                     </li>
-                    <lI>
-                        DevTools
-                    </lI>
-                    <li>
-                        TestLink
-                    </li>
-                    <li>
-                        Jira
-                    </li>
-                    <li>
-                        Postman
-                    </li>
-                    <li>
-                        SQL
-                    </li>
-                    <li>
-                        Basic knowledge of GIT
-                    </li>
-                    <li>
-                        Basic knowledge of HTML and CSS
-                    </li>
-                </ul>
-                <li>
-                    <strong>Soft skills</strong>
-                </li>
-                <ul class="skills">
-                    <li>
-                        Non-conflicting
-                    </li>
-                    <li>
-                        Learning fast
-                    </li>
-                    <li>
-                        Sociable
-                    </li>
-                </ul>
-                <li>
-                    <strong>Languages</strong>
-                </li>
-                <ul class="skills">
-                    <li>
-                        English - intermediate
-                    </li>
-                    <li>
-                        Ukrainian - native
-                    </li>
-                    <li>
-                        Russian - native
-                    </li>
-                </ul>
+                </div>
+                <div class="skils">
+                    <ul>
+                        <li>
+                            English - intermediate
+                        </li>
+                        <li>
+                            Ukrainian - native
+                        </li>
+                        <li>
+                            Russian - native
+                        </li>
+                    </ul>
+                </div>
             </ul>
         </div>
 
